# serializer version: 1
# name: test_entity_and_device_data[site_payload0-device_payload0][update.device_1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'update',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'update.device_1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <UpdateDeviceClass.FIRMWARE: 'firmware'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'unifi',
    'previous_unique_id': None,
    'supported_features': <UpdateEntityFeature: 5>,
    'translation_key': None,
    'unique_id': 'device_update-00:00:00:00:01:01',
    'unit_of_measurement': None,
  })
# ---
# name: test_entity_and_device_data[site_payload0-device_payload0][update.device_1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'auto_update': False,
      'device_class': 'firmware',
      'display_precision': 0,
      'entity_picture': 'https://brands.home-assistant.io/_/unifi/icon.png',
      'friendly_name': 'Device 1',
      'in_progress': False,
      'installed_version': '4.0.42.10433',
      'latest_version': '4.3.17.11279',
      'release_summary': None,
      'release_url': None,
      'skipped_version': None,
      'supported_features': <UpdateEntityFeature: 5>,
      'title': None,
      'update_percentage': None,
    }),
    'context': <ANY>,
    'entity_id': 'update.device_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entity_and_device_data[site_payload0-device_payload0][update.device_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'update',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'update.device_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <UpdateDeviceClass.FIRMWARE: 'firmware'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'unifi',
    'previous_unique_id': None,
    'supported_features': <UpdateEntityFeature: 5>,
    'translation_key': None,
    'unique_id': 'device_update-00:00:00:00:01:02',
    'unit_of_measurement': None,
  })
# ---
# name: test_entity_and_device_data[site_payload0-device_payload0][update.device_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'auto_update': False,
      'device_class': 'firmware',
      'display_precision': 0,
      'entity_picture': 'https://brands.home-assistant.io/_/unifi/icon.png',
      'friendly_name': 'Device 2',
      'in_progress': False,
      'installed_version': '4.0.42.10433',
      'latest_version': '4.0.42.10433',
      'release_summary': None,
      'release_url': None,
      'skipped_version': None,
      'supported_features': <UpdateEntityFeature: 5>,
      'title': None,
      'update_percentage': None,
    }),
    'context': <ANY>,
    'entity_id': 'update.device_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entity_and_device_data[site_payload1-device_payload0][update.device_1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'update',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'update.device_1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <UpdateDeviceClass.FIRMWARE: 'firmware'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'unifi',
    'previous_unique_id': None,
    'supported_features': <UpdateEntityFeature: 4>,
    'translation_key': None,
    'unique_id': 'device_update-00:00:00:00:01:01',
    'unit_of_measurement': None,
  })
# ---
# name: test_entity_and_device_data[site_payload1-device_payload0][update.device_1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'auto_update': False,
      'device_class': 'firmware',
      'display_precision': 0,
      'entity_picture': 'https://brands.home-assistant.io/_/unifi/icon.png',
      'friendly_name': 'Device 1',
      'in_progress': False,
      'installed_version': '4.0.42.10433',
      'latest_version': '4.3.17.11279',
      'release_summary': None,
      'release_url': None,
      'skipped_version': None,
      'supported_features': <UpdateEntityFeature: 4>,
      'title': None,
      'update_percentage': None,
    }),
    'context': <ANY>,
    'entity_id': 'update.device_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entity_and_device_data[site_payload1-device_payload0][update.device_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'update',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'update.device_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <UpdateDeviceClass.FIRMWARE: 'firmware'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'unifi',
    'previous_unique_id': None,
    'supported_features': <UpdateEntityFeature: 4>,
    'translation_key': None,
    'unique_id': 'device_update-00:00:00:00:01:02',
    'unit_of_measurement': None,
  })
# ---
# name: test_entity_and_device_data[site_payload1-device_payload0][update.device_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'auto_update': False,
      'device_class': 'firmware',
      'display_precision': 0,
      'entity_picture': 'https://brands.home-assistant.io/_/unifi/icon.png',
      'friendly_name': 'Device 2',
      'in_progress': False,
      'installed_version': '4.0.42.10433',
      'latest_version': '4.0.42.10433',
      'release_summary': None,
      'release_url': None,
      'skipped_version': None,
      'supported_features': <UpdateEntityFeature: 4>,
      'title': None,
      'update_percentage': None,
    }),
    'context': <ANY>,
    'entity_id': 'update.device_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
